test_data/Json/ContainedInEnvironment/Unexpected/Unserializable/InvalidModelType/Operation/invalidModelType.json.exception
Unexpected model type for ISubmodelElement: aCompletelyInvalidModelType at: submodels[0].submodelElements[0]